--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@ngrx/store-devtools": "^2.0.0-beta.1",
     "@ngrx/store-log-monitor": "^2.0.0-beta.1",
     "core-js": "^2.2.2",
+    "gulp-jsforce-deploy": "^1.1.2",
+    "gulp-zip": "^3.2.0",
     "ngrx-store-logger": "^0.1.4",
     "node-uuid": "^1.4.7",
     "normalize.css": "^4.1.1",
